<resources>
    <string name="app_name">MyQur\'an</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_branding">Oratakashi.id</string>
    <string name="label_salam">Assalamualaikum,</string>
    <string name="label_greeting">Sudah mengaji hari ini?</string>
    <string name="label_continue">Lanjutkan</string>
    <string name="label_surah_list">Daftar Surah</string>
    <string name="placeholder_surah_desc">%1$s - %2$s Ayat</string>
    <string name="placeholder_surah_name">QS: %1$s</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="label_information">Informasi</string>
    <string name="label_copy">Copy</string>
    <string name="label_share">Bagikan</string>
    <string name="label_mark_last_read">Tandai terakhir dibaca</string>
    <string name="label_save_to_bookmark">Simpan ke bookmark</string>
</resources>