<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.menu.detail.dialog.contextdialog.ContextDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view3"
            android:layout_width="@dimen/dimen_120dp"
            android:layout_height="@dimen/dimen_5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_bottom_sheet_handler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:textAppearance="?attr/bodyLargeBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            tools:text="@string/foo" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/black5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp">

                <ImageView
                    android:id="@+id/ivBgSurah"
                    android:layout_width="@dimen/dimen_60dp"
                    android:layout_height="@dimen/dimen_60dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:src="@drawable/ic_surah_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvSurahNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/bodySmallMedium"
                    app:layout_constraintBottom_toBottomOf="@+id/ivBgSurah"
                    app:layout_constraintEnd_toEndOf="@+id/ivBgSurah"
                    app:layout_constraintStart_toStartOf="@+id/ivBgSurah"
                    app:layout_constraintTop_toTopOf="@+id/ivBgSurah"
                    tools:text="999" />

                <TextView
                    android:id="@+id/tvAyat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:textAppearance="?attr/bodyUtsmaniRegular"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ivBgSurah"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivBgSurah"
                    app:layout_constraintTop_toTopOf="@+id/ivBgSurah"
                    tools:text="بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ" />

                <TextView
                    android:id="@+id/tvLatin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:textAppearance="?attr/bodySmallRegular"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAyat"
                    tools:text="bismi" />

                <TextView
                    android:id="@+id/tvTranslation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:textAppearance="?attr/bodySmallRegular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLatin"
                    tools:text="Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang." />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@color/black5"/>

            <com.oratakashi.myquran.ui.widget.menu.OraMenuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_copy"
                app:startIconDrawable="@drawable/ic_copy"/>

            <com.oratakashi.myquran.ui.widget.menu.OraMenuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_share"
                app:startIconDrawable="@drawable/ic_share"/>

            <com.oratakashi.myquran.ui.widget.menu.OraMenuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_mark_last_read"
                app:startIconDrawable="@drawable/ic_mark"/>

            <com.oratakashi.myquran.ui.widget.menu.OraMenuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_save_to_bookmark"
                app:startIconDrawable="@drawable/ic_bookmark"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>